# Statsy

./: .gitignore  CMakeLists.txt
statsy/: CMakeLists.txt
statsy/include/statsy/config/: StatsyConfig.h
statsy/include/statsy/geometry/: Edge.h  Mesh.h  Polygon.h
statsy/include/statsy/geometry/utils/: utils.h
statsy/include/statsy/loader/: DelynoiLoader.h  MeshLoader.h  OffLoader.h  VeamyLoader.h
statsy/include/statsy/models/: Mesh.h  MeshElement.h
statsy/include/statsy/models/geometry/: Edge.h  Polygon.h  Vertex.h
statsy/include/statsy/models/numeric/: Displacement.h  Element.h
statsy/include/statsy/models/utils/: utils.h
statsy/include/statsy/reader/: LineReader.h
statsy/include/statsy/report/: Histogram.h  Report.h  Reportable.h  StatProcessor.h
statsy/include/statsy/report/reportables/: Value.h  reportables.h  values.h
statsy/include/statsy/utils/: utils.h
statsy/src/config/: StatsyConfig.cpp
statsy/src/geometry/: Edge.cpp  Mesh.cpp  Polygon.cpp
statsy/src/geometry/utils/: utils.cpp
statsy/src/loader/: DelynoiLoader.cpp  OffLoader.cpp  VeamyLoader.cpp
statsy/src/models/: Mesh.cpp
statsy/src/models/geometry/: Edge.cpp  Polygon.cpp
statsy/src/models/numeric/: Element.cpp
statsy/src/models/utils/: utils.cpp
statsy/src/reader/: LineReader.cpp
statsy/src/report/: Histogram.cpp
statsy/src/report/reportables/: ReportableClasses.cpp  ValueClasses.cpp  reportables.cpp  values.cpp
test/: CMakeLists.txt  DelynoiFileTest.cpp
